; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/console/extr_video_console.c_vc_progressmeter_range.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/console/extr_video_console.c_vc_progressmeter_range.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@kProgressMeterEnd = common dso_local global i32 0, align 4
@vc_progress_meter_start = common dso_local global i32 0, align 4
@vc_progress_meter_end = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @vc_progressmeter_range to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vc_progressmeter_range(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @kProgressMeterEnd, align 4
  %6 = icmp sgt i32 %4, %5
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = load i32, i32* @kProgressMeterEnd, align 4
  store i32 %8, i32* %2, align 4
  br label %9

9:                                                ; preds = %7, %1
  %10 = load i32, i32* @vc_progress_meter_start, align 4
  %11 = load i32, i32* %2, align 4
  %12 = load i32, i32* @vc_progress_meter_end, align 4
  %13 = load i32, i32* @vc_progress_meter_start, align 4
  %14 = sub nsw i32 %12, %13
  %15 = mul nsw i32 %11, %14
  %16 = load i32, i32* @kProgressMeterEnd, align 4
  %17 = sdiv i32 %15, %16
  %18 = add nsw i32 %10, %17
  store i32 %18, i32* %3, align 4
  %19 = load i32, i32* %3, align 4
  ret i32 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
